src/renderers/snapshots/scrut__renderers__junit__tests__empty_run_renders_empty_report.snap
---
source: src/renderers/junit.rs
assertion_line: 817
expression: rendered
---
<?xml version="1.0" encoding="UTF-8"?>
<testsuites tests="0" failures="0" errors="0" skipped="0" time="0.000">
</testsuites>
