src/renderers/snapshots/scrut__renderers__junit__tests__internal_error_renders_error.snap
---
source: src/renderers/junit.rs
assertion_line: 753
expression: rendered
---
<?xml version="1.0" encoding="UTF-8"?>
<testsuites tests="1" failures="0" errors="1" skipped="0" time="0.010">
  <testsuite name="path/file.md" package="path" tests="1" failures="0" errors="1" skipped="0" time="0.010">
    <properties>
      <property name="scrut.format" value="markdown"/>
    </properties>
    <testcase name="the title" classname="path/file.md" file="path/file.md" line="12" time="0.010">
      <error type="internal_error" message="something broke">// =============================================================================
// @ path/file.md:12
// -----------------------------------------------------------------------------
// # the title
// -----------------------------------------------------------------------------
// $ the command
// =============================================================================

error: something broke</error>
    </testcase>
  </testsuite>
</testsuites>
