src/renderers/snapshots/scrut__renderers__junit__tests__non_printable_output_is_escaped.snap
---
source: src/renderers/junit.rs
assertion_line: 737
expression: rendered
---
<?xml version="1.0" encoding="UTF-8"?>
<testsuites tests="1" failures="0" errors="0" skipped="0" time="0.010">
  <testsuite name="path/file.md" tests="1" failures="0" errors="0" skipped="0" time="0.010">
    <testcase name="the title" classname="path/file.md" file="path/file.md" line="12" time="0.010">
      <system-out>before\aafter
second\x00line</system-out>
    </testcase>
  </testsuite>
</testsuites>
