src/renderers/snapshots/scrut__renderers__junit__tests__suite_carries_package_and_properties.snap
---
source: src/renderers/junit.rs
assertion_line: 883
expression: rendered
---
<?xml version="1.0" encoding="UTF-8"?>
<testsuites tests="1" failures="0" errors="0" skipped="0" time="0.010">
  <testsuite name="tests/cases/file.md" package="tests/cases" tests="1" failures="0" errors="0" skipped="0" time="0.010">
    <properties>
      <property name="scrut.format" value="markdown"/>
    </properties>
    <testcase name="the title" classname="tests/cases/file.md" file="tests/cases/file.md" line="12" time="0.010"/>
  </testsuite>
</testsuites>
